*** empty log message ***

--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -628,7 +628,11 @@ create a submodule of that type \\\hline
 \section{Changing the network graphics at run-time}
 
 %FIXME update
-%displayString().setTagArg(), bubble() etc here!
+% isGUI(), displayString().setTagArg(), bubble() etc here!
+
+% implemented bubble() -- submodules
+% can display a bubble with a short message like "Queue full!".
+% Added [Tkenv]/show-bubbles=true/false omnetpp.ini entry.
 
 \subsection{Setting display strings}
 
