*** empty log message ***

--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -206,6 +206,8 @@ as well.}\\\hline
 (\textit{"4 pks received"}). \textit{pos} can be \ttt{"l"}, \ttt{"r"} or \ttt{"t"}
 for left, right and top.
 
+%FIXME todo insert: The string may contain \t, \n, \r, \f, \b, \x0A with same meaning as in C/C++
+
 Defaults: \textit{radius}=100, \textit{pos}="t", \textit{color}=blue}\\\hline
 
 \end{longtable}
