--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -394,7 +394,8 @@ It is also possible to specify colors in HSB (hue-saturation-brightness) as
 \textit{@hhssbb} (with \textit{h}, \textit{s}, \textit{b} being hex digits).
 HSB makes it easier to scale colors e.g. from white to bright red.
 
-A hypen (\textit{"-"}) specified as color means transparent.
+You can produce a transparent background by specifying a hyphen (\textit{"-"})
+as color.
 
 
 \subsection{Icon colorization}
@@ -638,58 +639,22 @@ create a submodule of that type \\\hline
 
 \subsection{Setting display strings}
 
-Sometimes it is useful to change the appearance or position of
-some components in the network graphics, such as the color of the
-modules\index{module!color}, color/width of connection arrows,
-position of a submodule, etc.
+Often it is useful to manipulate the display string at runtime.
+Changing colors, icon, or text may convey status change, and
+changing a module's position is useful when simulating mobile
+networks.
 
-The appearance of nodes and connections is determined by the display
-strings\index{display strings}. Display strings (e.g. \ttt{"p=100,10;i=pc"})
-are initially taken from the NED description.
-You can change the display string of a module or connection arrow
-at run-time by calling methods named \fname{setDisplayString()}.
-The \cclass{cDisplayString} class (discussed in the following sections)
-might be useful for manipulating the display string.
+Display strings are stored in \cclass{cDisplayString} objects inside
+modules and gates. \cclass{cDisplayString} also lets you manipulate the string.
 
-Setting the module's appearance when it is displayed as a component
-within a compound module:
+To get a pointer to the \cclass{cDisplayString} object, you can call
+the module's \fname{displayString()} method:
 
-\begin{verbatim}
-setDisplayString("p=100,100;b=60,30,rect;o=red,black,3", true);
-\end{verbatim}
+\begin{Verbatim}
+% FIXME....
+\end{Verbatim}
 
-Setting appearance of a compound module when it is displayed as a
-bounding box for its submodules:
-
-\begin{verbatim}
-parentModule()->setBackgroundDisplayString("p=100.....", true);
-\end{verbatim}
-
-The display string of a connection arrow\index{arrow display string}
-is stored in its source gate, so you'll need to write something
-like this:
-
-\begin{verbatim}
-gate("out")->setDisplayString("o=yellow,3");
-\end{verbatim}
-
-The \fname{setDisplayString()} methods additionally take a bool
-argument called \fvar{immediate}. It specifies whether the display
-string change should take effect immediately, or only after processing
-the current event (the default is \textit{immediate=true}). If several
-display string changes are going to be done within one event, then
-\textit{immediate=false} is useful because it reduces the number of
-necessary redraws. \textit{Immediate=false} also uses less stack.  But
-its drawback is that a \fname{setDisplayString()} followed by a
-\fname{send()} would actually be displayed in reverse order (message
-animation first), because message animations are performed immediately
-(actually within the \fname{send()} call).
-
-
-\subsection{The cDisplayString class}
-
-The \cclass{cDisplayString} utility class lets you parse and
-manipulate display strings.
+The \cclass{cDisplayString} utility class lets...
 
 As far as \cclass{cDisplayString} is concerned, a display string
 (e.g. \ttt{"p=100,125;i=cloud"}) is a string that consist of several
@@ -714,6 +679,30 @@ dispstr.setTagArg("x",2,"jim");
 dispstr.setTagArg("p",0,"beta");
 ev << dispstr.getString();  // result: "x=joe,,jim;a=1,2;p=beta,,3"
 \end{Verbatim}
+
+
+Setting the module's appearance when it is displayed as a component
+within a compound module:
+
+\begin{verbatim}
+displayString()->parse("p=100,100;b=60,30,rect;o=red,black,3", true);
+\end{verbatim}
+
+Setting appearance of a compound module when it is displayed as a
+bounding box for its submodules:
+
+\begin{verbatim}
+parentModule()->backgroundDisplayString()->parse("p=100.....");
+\end{verbatim}
+
+The display string of a connection arrow\index{arrow display string}
+is stored in its source gate, so you'll need to write something
+like this:
+
+\begin{verbatim}
+gate("out")->displayString()->parse("o=yellow,3");
+\end{verbatim}
+
 
 
 
