--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -630,14 +630,16 @@ create a submodule of that type \\\hline
 
 \section{Changing the network graphics at run-time}
 
+\subsection{Animation}
+
 %FIXME update
-% isGUI(), displayString().setTagArg(), bubble() etc here!
+% ev.isGUI(),
 
 % implemented bubble() -- submodules
 % can display a bubble with a short message like "Queue full!".
 % Added [Tkenv]/show-bubbles=true/false omnetpp.ini entry.
 
-\subsection{Setting display strings}
+\subsection{Changing display strings at runtime}
 
 Often it is useful to manipulate the display string at runtime.
 Changing colors, icon, or text may convey status change, and
@@ -651,7 +653,15 @@ To get a pointer to the \cclass{cDisplayString} object, you can call
 the module's \fname{displayString()} method:
 
 \begin{Verbatim}
-% FIXME....
+cDisplayString *dispStr = displayString();
+\end{Verbatim}
+
+\begin{Verbatim}
+cDisplayString *bgDispStr = parentModule()->backgroundDisplayString();
+\end{Verbatim}
+
+\begin{Verbatim}
+cDisplayString *gateDispStr = gate("out")->displayString();
 \end{Verbatim}
 
 The \cclass{cDisplayString} utility class lets...
@@ -672,38 +682,13 @@ as data elements separated by semicolons, equal signs and commas.
 An example:
 
 \begin{Verbatim}
-cDisplayString dispstr("a=1,2;p=alpha,,3");
-dispstr.insertTag("x");
-dispstr.setTagArg("x",0,"joe");
-dispstr.setTagArg("x",2,"jim");
-dispstr.setTagArg("p",0,"beta");
-ev << dispstr.getString();  // result: "x=joe,,jim;a=1,2;p=beta,,3"
+dispStr->>parse("a=1,2;p=alpha,,3");
+dispStr->insertTag("x");
+dispStr->setTagArg("x",0,"joe");
+dispStr->setTagArg("x",2,"jim");
+dispStr->setTagArg("p",0,"beta");
+ev << dispStr->getString();  // result: "x=joe,,jim;a=1,2;p=beta,,3"
 \end{Verbatim}
-
-
-Setting the module's appearance when it is displayed as a component
-within a compound module:
-
-\begin{verbatim}
-displayString()->parse("p=100,100;b=60,30,rect;o=red,black,3", true);
-\end{verbatim}
-
-Setting appearance of a compound module when it is displayed as a
-bounding box for its submodules:
-
-\begin{verbatim}
-parentModule()->backgroundDisplayString()->parse("p=100.....");
-\end{verbatim}
-
-The display string of a connection arrow\index{arrow display string}
-is stored in its source gate, so you'll need to write something
-like this:
-
-\begin{verbatim}
-gate("out")->displayString()->parse("o=yellow,3");
-\end{verbatim}
-
-
 
 
 
