*** empty log message ***

--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -656,6 +656,8 @@ the module's \fname{displayString()} method:
 cDisplayString *dispStr = displayString();
 \end{Verbatim}
 
+%FIXME finish!
+
 \begin{Verbatim}
 cDisplayString *bgDispStr = parentModule()->backgroundDisplayString();
 \end{Verbatim}
