--- a/doc/src/manual/ch-neddoc.tex
+++ b/doc/src/manual/ch-neddoc.tex
@@ -131,7 +131,7 @@ Example:
 
 \subsection{Special tags}
 
-\fname{\opp_neddoc} understands the following tags and will render them accordingly:
+\fname{\opp\_neddoc} understands the following tags and will render them accordingly:
 \ttt{@author}, \ttt{@date}, \ttt{@todo}, \ttt{@bug}, \ttt{@see}, \ttt{@since},
 \ttt{@warning}, \ttt{@version}. An example usage:
 
