--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-22  Andras Varga
+
+	* opp_msgc: fix: in generated setArraySize(), avoid calling "new [0]"
+	if size==0 is passed.
+
 2004-12-19  Andras Varga
 
 	* opp_msgc: fix: if a message was subclassed in another .msg file, base
