*** empty log message ***

--- a/doc/src/manual/ch-sim-lib.tex
+++ b/doc/src/manual/ch-sim-lib.tex
@@ -1383,7 +1383,8 @@ double mean = stat.mean(),
 
 % TBD this has to be rewritten at some point... maybe take over examples from Doxygen doc.
 
-The distribution estimation\index{distribution!estimation} classes (the histogram classes,
+The distribution estimation\index{distribution!estimation} classes
+(\cclass{cLongHistogram}, \cclass{cDoubleHistogram}, \cclass{cVarHistogram},
 \cclass{cPSquare} and \cclass{cKSplit}) are derived from
 \cclass{cDensityEstBase}. Distribution estimation classes (except for
 \cclass{cPSquare}) assume that the observations are within a range.
