*** empty log message ***

--- a/doc/src/manual/ch-ana-sim.tex
+++ b/doc/src/manual/ch-ana-sim.tex
@@ -117,6 +117,8 @@ Further columns on data lines are the simulation time and the recorded value.
 
 \subsection{Working without Plove}
 
+FIXME why?
+
 \subsubsection{Extracting vectors from the file}
 
 You can use the Unix \fprog{grep} tool to extract a particular vector
