*** empty log message ***

--- a/doc/src/manual/usman-bibl.bib
+++ b/doc/src/manual/usman-bibl.bib
@@ -63,6 +63,24 @@
 %% OMNeT++ - Andras
 %%
 
+@Inproceedings{OppParsim03,
+  title = "Parallel Simulation Made Easy with OMNeT++",
+  author = "Y. Ahmet Sekercioglu, Andr\'{a}s Varga and Gregory K. Egan",
+  booktitle = "Proceedings of the European Simulation Symposium (ESS 2003), 
+               26-29 Oct, 2003, Delft, The Netherlands",
+  organization = "International Society for Computer Simulation",
+  year = 2003
+}
+
+@Inproceedings{ParsimCrit03,
+  title = "A Practical Efficiency Criterion for the Null Message Algorithm",
+  author = "Andr\'{a}s Varga, Y. Ahmet Sekercioglu and Gregory K. Egan",
+  booktitle = "Proceedings of the European Simulation Symposium (ESS 2003), 
+               26-29 Oct, 2003, Delft, The Netherlands",
+  organization = "International Society for Computer Simulation",
+  year = 2003
+}
+
 @Article{Edu99,
   author = "Andr\'{a}s Varga",
   title = "Using the {OMNeT++} Discrete Event Simulation System in Education",
