*** empty log message ***

--- a/doc/src/manual/ch-opp-design.tex
+++ b/doc/src/manual/ch-opp-design.tex
@@ -401,6 +401,7 @@ macro, and finally tell Envir to use them via \ttt{omnetpp.ini} entries.
 The following plugin interfaces are supported:
 
 \begin{itemize}
+%FIXME cRNG, cScheduler
    \item{\cclass{cOutputScalarManager}. It handles recording the scalar output data,
      output via the cModule::recordScalar() family of functions.
      The default output scalar manager is \cclass{cFileOutputScalarManager},
