--- a/doc/src/manual/ch-parallel-exec.tex
+++ b/doc/src/manual/ch-parallel-exec.tex
@@ -116,7 +116,7 @@ Without going into the details: if the resulting $\lambda$ value is at
 minimum larger than one, but rather in the range 10..100, there is
 a good change that the simulation will perform well when run in
 parallel. With $\lambda < 1$, poor performance is guaranteed.
-For details see the paper \cite{FIXME}.
+For details see the paper \cite{ParsimCrit03}.
 
 
 \section{Parallel distributed simulation support in {\opp}}
